--- a/AlarmEventServiceInfrastructure/AlarmEventServiceInfrastructure.csproj
+++ b/AlarmEventServiceInfrastructure/AlarmEventServiceInfrastructure.csproj
@@ -5,20 +5,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{20076719-C658-41AD-B43D-6F9A8C6CA19A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>NetworkDynamicService</RootNamespace>
-    <AssemblyName>NetworkDynamicService</AssemblyName>
+    <ProjectGuid>{B9EC493F-D864-4479-86F4-E4EF6C500831}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>AlarmEventServiceInfrastructure</RootNamespace>
+    <AssemblyName>AlarmEventServiceInfrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -28,7 +25,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -46,8 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,49 +51,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\INDSRealTimePointCache.cs" />
-    <Compile Include="Cache\NDSRealTimePointCache.cs" />
-    <Compile Include="NDSConfigurationProxy.cs" />
-    <Compile Include="NetworkDynamicServiceHost.cs" />
-    <Compile Include="CommandingService.cs" />
-    <Compile Include="ProcessingService.cs" />
-    <Compile Include="ProxyPool\FepCommandingServiceProxy.cs" />
-    <Compile Include="ProxyPool\PointUpdateProxy.cs" />
-    <Compile Include="PublisProxy\PublisherProxy.cs" />
-    <Compile Include="StateUpdater\StateUpdateService.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="AlarmEventContext.cs" />
+    <Compile Include="AlarmEventInitializeDB.cs" />
+    <Compile Include="AlarmEventRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StateUpdateServiceProxy.cs" />
-    <Compile Include="Transaction\ModelUpdateContract.cs" />
-    <Compile Include="Transaction\TransactionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\ScadaCommon.Database.Alarm.datasource" />
-    <None Include="Properties\DataSources\ScadaCommon.Database.Event.datasource" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AlarmEventServiceInfrastructure\AlarmEventServiceInfrastructure.csproj">
-      <Project>{B9EC493F-D864-4479-86F4-E4EF6C500831}</Project>
-      <Name>AlarmEventServiceInfrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BackEndProcessorService\BackEndProcessorService.csproj">
-      <Project>{9E9F3E50-1395-46B5-8D75-B16A08B45CDF}</Project>
-      <Name>BackEndProcessorService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EntityFrameworkMeasurementInfrastructure\EntityFrameworkMeasurementInfrastructure.csproj">
-      <Project>{B4FB1C6B-6F44-4F1E-B6C2-07E025A2ACBA}</Project>
-      <Name>EntityFrameworkMeasurementInfrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PubSubCommon\PubSubCommon.csproj">
-      <Project>{6109286a-0dc9-469c-a271-0605c18ed32c}</Project>
-      <Name>PubSubCommon</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RepositoryCore\RepositoryCore.csproj">
       <Project>{46F879CD-DF1D-402A-9373-62153FDE9ED4}</Project>
       <Name>RepositoryCore</Name>
@@ -106,10 +68,6 @@
     <ProjectReference Include="..\SCADA\ScadaCommon\ScadaCommon.csproj">
       <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
       <Name>ScadaCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
-      <Project>{0A8F68EC-31CB-4FD1-B54A-DCF2FC97BBEC}</Project>
-      <Name>TransactionManagerContracts</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
