--- a/SCADA/ScadaCommon/ScadaCommon.csproj
+++ b/SCADA/ScadaCommon/ScadaCommon.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Connection\FunctionExecutor.cs" />
     <Compile Include="Connection\IConnection.cs" />
     <Compile Include="Connection\TCPConnection.cs" />
+    <Compile Include="CRCCalculator\CRCCalculator.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Interfaces\IAnalogPoint.cs" />
     <Compile Include="Interfaces\IAutomationManager.cs" />
