--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -42,6 +42,11 @@
                 binding="netTcpBinding"
                 contract="ScadaCommon.ServiceContract.IStateUpdateService" name="StateUpdateServiceEndPoint">
       </endpoint>
+
+      <endpoint address="net.tcp://localhost:20005/IPointUpdateService"
+                binding="netTcpBinding"
+                contract="ScadaCommon.ServiceContract.IPointUpdateService" name="UpdatePointEndPoint">
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
