--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -24,6 +24,15 @@
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateProcessingModule">
         </endpoint>
       </service>
+    <service name="NetworkDynamicService.PointOperateService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10022/IFieldCommunicationService" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService">
+        </endpoint>
+      </service>
     </services>
 
     <client>
