Scada projects refactoring

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -54,9 +54,9 @@
       <endpoint address="net.tcp://localhost:10058/IAlarmEventService"
         binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService"
         name="AlarmEventServiceEndPoint" />
-    <endpoint address="net.tcp://localhost:11111/INDSBasePointCacheItems"
-        binding="netTcpBinding" contract="ScadaCommon.BackEnd_FrontEnd.INDSBasePointCacheItems"
-        name="INDSBasePointCacheItemsEndPoint" />
+    <endpoint address="net.tcp://localhost:11111/IFEPConfigService"
+        binding="netTcpBinding" contract="ScadaCommon.BackEnd_FrontEnd.IFEPConfigService"
+        name="IFEPConfigService" />
     </client>
 
     
