--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -27,10 +27,10 @@
         </host>
       </service>
       <service name="FrontEndProcessorService.NDSConfigurationService">
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.BackEnd_FrontEnd.INDSBasePointCacheItems" />
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.BackEnd_FrontEnd.IFEPConfigService" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:11111/INDSBasePointCacheItems" />
+            <add baseAddress="net.tcp://localhost:11111/IFEPConfigService" />
           </baseAddresses>
         </host>
       </service>
