--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -46,6 +46,9 @@
       <endpoint address="net.tcp://localhost:10002/IFEPCommandingServiceContract"
         binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFEPCommandingServiceContract"
         name="FEPCommandingServiceContract" />
+      <endpoint address="net.tcp://localhost:7001/Pub"
+        binding="netTcpBinding" contract="PubSubCommon.IPub"
+        name="PublisherEndPoint" />
       <endpoint address="net.tcp://localhost:30003/IStateUpdateService"
         binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService"
         name="StateUpdateServiceEndPoint" />
