--- a/PubSubCommon/PubSubCommon.csproj
+++ b/PubSubCommon/PubSubCommon.csproj
@@ -47,6 +47,8 @@
     <Compile Include="ISub.cs" />
     <Compile Include="NMSModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScadaModel.cs" />
+    <Compile Include="ScadaUIExchangeModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
