Update DateTime and ConnectionState fixed

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -15,15 +15,16 @@
         </host>
       </service>
 
-      <service name="BackEndProcessorService.StateProcessingModule">
+      <service name="NetworkDynamicService.PointUpdater.PointUpdateService">
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10005/IStateProcessingModule" />
+            <add baseAddress="net.tcp://localhost:10005/IPointUpdateService" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateProcessingModule">
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IPointUpdateService">
         </endpoint>
       </service>
+      
     <service name="NetworkDynamicService.PointOperateService">
         <host>
           <baseAddresses>
