--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -11,9 +11,9 @@
                 contract="ScadaCommon.ServiceContract.IBackEndProessingData" name="NetworkDynamicServiceEndPoint">
       </endpoint>
 
-      <endpoint address="net.tcp://localhost:10005/IStateProcessingModule"
+      <endpoint address="net.tcp://localhost:10005/IPointUpdateService"
                 binding="netTcpBinding"
-                contract="ScadaCommon.ServiceContract.IStateProcessingModule" name="NetworkDynamicStateServiceEndPoint">
+                contract="ScadaCommon.ServiceContract.IPointUpdateService" name="NetworkDynamicStateServiceEndPoint">
       </endpoint>
     </client>
 
