added measurement provider service

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -14,6 +14,14 @@
           </baseAddresses>
         </host>
       </service>
+      <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.MeasurementProviderService">
+        <endpoint address="" binding="netTcpBinding" contract="RepositoryCore.Interfaces.IMeasurementRepository" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10059/IMeasurementRepository" />
+          </baseAddresses>
+        </host>
+      </service>
       <service behaviorConfiguration="NetworkDynamicService.ServiceBehavior" name="NetworkDynamicService.PointUpdater.StateUpdateService">
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IStateUpdateService" />
         <host>
