--- a/NetworkModelGDAContract/NetworkModelGDAContract.csproj
+++ b/NetworkModelGDAContract/NetworkModelGDAContract.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A61FACB3-147E-4FD9-88C1-A3F226157C23}</ProjectGuid>
+    <ProjectGuid>{60EEDD71-25C6-488A-870A-A16ACFC91D88}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ProcessingModule</RootNamespace>
@@ -42,19 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Acquisitor.cs" />
-    <Compile Include="FunctionExecutor.cs" />
-    <Compile Include="ProcessingManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="INetworkModelGDAContract.cs" />
+    <Compile Include="NetworkModelGDAProxy.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DNP3\DNP3.csproj">
-      <Project>{8cc2c599-abc9-426e-8d54-4f9f25162417}</Project>
-      <Name>DNP3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScadaCommon\ScadaCommon.csproj">
-      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
-      <Name>ScadaCommon</Name>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{6c234280-508a-47a4-b9ca-2677082ef85f}</Project>
+      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
