Alarms and events changed, Commanding working,some problem on  scada

--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -11,4 +11,17 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract"
+        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract"
+        name="UICommandingService" />
+
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService"
+        binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService"
+        name="AlarmEventService" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
