--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Model\TapChanger.cs" />
     <Compile Include="Model\Transformator.cs" />
     <Compile Include="Model\UIModel.cs" />
+    <Compile Include="ProxyPool\AlarmEventServiceProxy.cs" />
+    <Compile Include="ProxyPool\CommandingServiceProxy.cs" />
+    <Compile Include="ProxyPool\ProxyServices.cs" />
     <Compile Include="Subscription\Sub.cs" />
     <Compile Include="TablesWindow.xaml.cs">
       <DependentUpon>TablesWindow.xaml</DependentUpon>
@@ -206,6 +209,10 @@
     <ProjectReference Include="..\PubSubCommon\PubSubCommon.csproj">
       <Project>{6109286A-0DC9-469C-A271-0605C18ED32C}</Project>
       <Name>PubSubCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCADA\ScadaCommon\ScadaCommon.csproj">
+      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
+      <Name>ScadaCommon</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
