--- a/SCADA/DNP3/DNP3.csproj
+++ b/SCADA/DNP3/DNP3.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FunctionParameters\DNP3Functions.cs" />
     <Compile Include="FunctionParameters\ReadAnalogOutputFunction.cs" />
     <Compile Include="FunctionParameters\ReadDiscreteInFunction.cs" />
+    <Compile Include="FunctionParameters\ReadDiscreteOutFunction.cs" />
     <Compile Include="FunctionParameters\WriteAnalogOutputFunction.cs" />
     <Compile Include="FunctionParameters\ReadAnalogInFunction.cs" />
     <Compile Include="FunctionParameters\WriteDiscreteOutFunction.cs" />
