--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,9 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumDescs.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="GDA\CompareHelper.cs" />
+    <Compile Include="GDA\Delta.cs" />
+    <Compile Include="GDA\Property.cs" />
+    <Compile Include="GDA\PropertyValue.cs" />
+    <Compile Include="GDA\ResourceDescription.cs" />
+    <Compile Include="ModelCodeHelper.cs" />
     <Compile Include="ModelDefines.cs" />
+    <Compile Include="ModelException\ErrorCode.cs" />
+    <Compile Include="ModelException\ModelException.cs" />
+    <Compile Include="ModelResourcesDesc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trace\CommonTrace.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
