Classes from Core

--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -41,6 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\ConductingEquipment.cs" />
+    <Compile Include="Core\ConnectivityNodeContainer.cs" />
+    <Compile Include="Core\Equipment.cs" />
+    <Compile Include="Core\EquipmentContainer.cs" />
+    <Compile Include="Core\IdentifiedObject.cs" />
+    <Compile Include="Core\PowerSystemResource.cs" />
+    <Compile Include="Core\Substation.cs" />
+    <Compile Include="Core\Terminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
