Wires classes added

--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -50,6 +50,17 @@
     <Compile Include="Core\Substation.cs" />
     <Compile Include="Core\Terminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wires\ACLineSegment.cs" />
+    <Compile Include="Wires\Breaker.cs" />
+    <Compile Include="Wires\Conductor.cs" />
+    <Compile Include="Wires\Disconnector.cs" />
+    <Compile Include="Wires\PowerTransformer.cs" />
+    <Compile Include="Wires\ProtectedSwitch.cs" />
+    <Compile Include="Wires\RatioTapChanger.cs" />
+    <Compile Include="Wires\RegulatingCondEq.cs" />
+    <Compile Include="Wires\Switch.cs" />
+    <Compile Include="Wires\TapChanger.cs" />
+    <Compile Include="Wires\TransformerWinding.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
