--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -49,7 +49,13 @@
     <Compile Include="Core\PowerSystemResource.cs" />
     <Compile Include="Core\Substation.cs" />
     <Compile Include="Core\Terminal.cs" />
+    <Compile Include="Meas\Analog.cs" />
+    <Compile Include="Meas\Discrete.cs" />
+    <Compile Include="Meas\Measurement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDMS\AsynchronousMachine.cs" />
+    <Compile Include="TDMS\FeederObject.cs" />
+    <Compile Include="Topology\ConnectivityNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
