--- a/SCADA/ProcessingModule/ProcessingModule.csproj
+++ b/SCADA/ProcessingModule/ProcessingModule.csproj
@@ -47,6 +47,7 @@
     <Compile Include="EGUConverter.cs" />
     <Compile Include="ProcessingManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnsolicitedMessageProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DNP3\DNP3.csproj">
