--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -44,11 +44,13 @@
   <ItemGroup>
     <Compile Include="EnumDescs.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="GDA\Association.cs" />
     <Compile Include="GDA\CompareHelper.cs" />
     <Compile Include="GDA\Delta.cs" />
     <Compile Include="GDA\Property.cs" />
     <Compile Include="GDA\PropertyValue.cs" />
     <Compile Include="GDA\ResourceDescription.cs" />
+    <Compile Include="GDA\UpdateResult.cs" />
     <Compile Include="ModelCodeHelper.cs" />
     <Compile Include="ModelDefines.cs" />
     <Compile Include="ModelException\ErrorCode.cs" />
