--- a/NetworkModelGDAContract/NetworkModelGDAContract.csproj
+++ b/NetworkModelGDAContract/NetworkModelGDAContract.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BACAF37-6E01-4703-BB17-7B5262B4B686}</ProjectGuid>
+    <ProjectGuid>{60EEDD71-25C6-488A-870A-A16ACFC91D88}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetworkModelService</RootNamespace>
-    <AssemblyName>NetworkModelService</AssemblyName>
+    <RootNamespace>NetworkModelGDAContract</RootNamespace>
+    <AssemblyName>NetworkModelGDAContract</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
@@ -43,12 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="Container.cs" />
-    <Compile Include="GDA\GenericDataAccess.cs" />
-    <Compile Include="GDA\ResourceIterator.cs" />
-    <Compile Include="NetworkModel.cs" />
-    <Compile Include="NetworkModelService.cs" />
+    <Compile Include="INetworkModelGDAContract.cs" />
+    <Compile Include="NetworkModelGDAProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,15 +51,6 @@
       <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
       <Name>Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DataModel\DataModel.csproj">
-      <Project>{47B89925-DDA4-477B-B9B0-33C069BCC5EA}</Project>
-      <Name>DataModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NetworkModelGDAContract\NetworkModelGDAContract.csproj">
-      <Project>{60EEDD71-25C6-488A-870A-A16ACFC91D88}</Project>
-      <Name>NetworkModelGDAContract</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
