--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -68,5 +68,11 @@
     <Compile Include="Wires\TapChanger.cs" />
     <Compile Include="Wires\TransformerWinding.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
