--- a/SCADA/DNP3/DNP3.csproj
+++ b/SCADA/DNP3/DNP3.csproj
@@ -50,6 +50,7 @@
     <Compile Include="FunctionParameters\ReadClass0DataFunction.cs" />
     <Compile Include="FunctionParameters\ReadDiscreteInFunction.cs" />
     <Compile Include="FunctionParameters\ReadDiscreteOutFunction.cs" />
+    <Compile Include="FunctionParameters\TimeMessage.cs" />
     <Compile Include="FunctionParameters\WriteAnalogOutputFunction.cs" />
     <Compile Include="FunctionParameters\ReadAnalogInFunction.cs" />
     <Compile Include="FunctionParameters\WriteDiscreteOutFunction.cs" />
