NMS SelfHostService configurated

--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <startup> 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
@@ -29,8 +26,8 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service behaviorConfiguration="NMS.ServiceBehavior" name="FTN.Services.NetworkModelService.GenericDataAccess">
-        <endpoint address="" binding="netTcpBinding" contract="FTN.ServiceContracts.INetworkModelGDAContract"
+      <service behaviorConfiguration="NMS.ServiceBehavior" name="NetworkModelService.GDA.GenericDataAccess">
+        <endpoint address="" binding="netTcpBinding" contract="NetworkModelGDAContract.INetworkModelGDAContract"
                   bindingConfiguration="netTcpBindingNoSecurity">
           <identity>
             <dns value="localhost" />
