--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -53,8 +53,8 @@
     <Compile Include="Meas\Discrete.cs" />
     <Compile Include="Meas\Measurement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TDMS\AsynchronousMachine.cs" />
-    <Compile Include="TDMS\FeederObject.cs" />
+    <Compile Include="Core\AsynchronousMachine.cs" />
+    <Compile Include="Core\FeederObject.cs" />
     <Compile Include="Topology\ConnectivityNode.cs" />
     <Compile Include="Wires\ACLineSegment.cs" />
     <Compile Include="Wires\Breaker.cs" />
