RDF/XML example file added

--- a/CIMAdapter/CIMAdapter.csproj
+++ b/CIMAdapter/CIMAdapter.csproj
@@ -109,6 +109,7 @@
       <Name>NetworkModelGDAContract</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Lib\ProjekatMaster2019CIMProfile_Labs.dll" />
   </ItemGroup>
