--- a/SCADA/FrontEndProcessorService/App.config
+++ b/SCADA/FrontEndProcessorService/App.config
@@ -3,4 +3,31 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
 	</startup>
+
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:10000/NetworkModelService/GDA/"
+                binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity"
+                contract="ScadaCommon.ServiceContract.IBackEndProessingData" name="NetworkDynamicServiceEndPoint">
+        <identity>
+          <dns value="localhost"/>
+        </identity>
+      </endpoint>
+    </client>
+
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
+				 openTimeout="00:30:00" sendTimeout="00:10:00" receiveTimeout="10:30:00" maxBufferSize="2147483647"
+				  maxReceivedMessageSize="2147483647">
+          <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647"/>
+          <security mode="None">
+            <transport clientCredentialType="None" protectionLevel="None" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+
+  </system.serviceModel>
 </configuration>
