NetworkDynamicService started developing

--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -3,4 +3,18 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <system.serviceModel>
+    <services>
+      <service name="BackEndProcessorService.BackEndPocessingModule">
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:10000/IBackEndProessingData" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IBackEndProessingData">
+        </endpoint>
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
