--- a/FieldCommunicationService/App.config
+++ b/FieldCommunicationService/App.config
@@ -1,18 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-	</startup>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+    </startup>
 
   <system.serviceModel>
-    <client>
-      <endpoint address="net.tcp://localhost:10000/IBackEndProessingData"
-                binding="netTcpBinding"
-                contract="ScadaCommon.ServiceContract.IBackEndProessingData" name="NetworkDynamicServiceEndPoint">
-      </endpoint>
-    </client>
-
-
     <services>
       <service name="FrontEndProcessorService.ViewModel.FieldCommunicationService">
         <endpoint address="" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFieldCommunicationService" />
